# ML_PM

./: .gitignore  README.md  pyproject.toml  requirements.txt
ML_PM.egg-info/: PKG-INFO  SOURCES.txt
nbs/: main.ipynb  second paper.ipynb
nbs/data/: FRED_ALL.parquet  FRED_MD.parquet
skfin/: __init__.py  datasets_.py  mv_estimators.py  plot.py
