[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ML_PM"
version = "0.1.0"
description = "v1"
authors = [
  { name = "Alexis Dantzikian", email = "alexis.dantzikian@gmail.com" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["skfin*", "src*"]